# hi

./: .gitignore  Pasted--1-The-Final-Model-What-This-Will-Become-This-will-evolve-into-a-fully-functional-enterpr-1741750946732.txt  Pasted-Alright-bro-Since-Replit-allows-real-time-collaboration-I-ll-craft-a-single-epic-A-to-Z-prompt-f-1741722703608.txt  Pasted-Got-it-Since-your-project-is-already-made-on-Replit-you-need-a-detailed-prompt-for-integra-1741748321037.txt  Pasted-Mushfiqul-Alam-Got-it-you-re-going-full-real-quantum-with-IBM-Qiskit-That-changes-everything--1741761867141.txt  README.md  ai_insights.py  charts.js  config.py  create_excel_sample.py  data_format.html  file_parser.py  index.html  main.js  main.js.bak  main.py  optimizer.py  pyproject.toml  quantum-playground.js  quantum-visualization.js  quantum_optimizer.py  quantum_playground.html  quantum_playground.py  sample_workflow.csv  sample_workflow.xlsx  style.css
