[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.3",
    "openai>=1.66.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "parallelbayesopt>=0.9.2",
    "psycopg2-binary>=2.9.10",
    "qiskit>=1.4.1",
    "flask-limiter>=3.11.0",
    "requests>=2.32.3",
]
